# aws-cli-utils

./: README.md  pyproject.toml
aws_cli/: auth.py  main.py
aws_cli/bucket/: crud.py  policy.py  upload.py  versioning.py
