[tool.poetry]
name = "aws-cli"
version = "0.1.0"
description = ""
authors = ["Beka Chkhaidze <beka.chkhaidze@connect.ge>"]
readme = "README.md"
packages = [{include = "aws_cli"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.0"
boto3 = "^1.26.118"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
